Change naming in Finite state machine api and applying them to whole project.